Fixing broken link in the blog.

--- a/_posts/2019-12-09-Meaning.md
+++ b/_posts/2019-12-09-Meaning.md
@@ -6,4 +6,4 @@ tags:
 
 This month I've been putting some more time into verbalizing my professional goals and values, as I've had to explain and establish many core concepts over and over again. Now, I'm not saying that creating the content will alleviate that need (it won't!), but I think having this clearly written and established will help people understand what they're getting into when dealing with me.
 
-Anyway, that's the blog preamble... [click here for the content!](MeaningfulWork)
+Anyway, that's the blog preamble... [click here for the content!](/MeaningfulWork)
