Grammar error fix.

--- a/_posts/2020-02-07-Bossless.md
+++ b/_posts/2020-02-07-Bossless.md
@@ -20,7 +20,7 @@ These are simple enough definitions, and as such they ring true. And there's int
 
 Being the boss, or having a boss, is thus built as an explicit power-relationship. After all, a person can't be a boss without their authority being recognized through some collective structure.
 
-My observation of human nature is that individuals need meaningful choices in order to mature in their role. That is to say, to deny a person outlets for decision making is to commoditizes them - to reduce them from an active agent to a more mechanical role. If a boss removes *all* decision making from those they dominate, it does a few interesting things:
+My observation of human nature is that individuals need meaningful choices in order to mature in their role. That is to say, to deny a person outlets for decision making is to commoditize them - to reduce them from an active agent to a more mechanical role. If a boss removes *all* decision making from those they dominate, it does a few interesting things:
 
   - It makes individual tasks very easy to rearrange and distribute, and can create an extremely modular work system. Standardization yields efficiencies, and standardized components are easily swapped!
   - It makes it extraordinarily easy to transition from *human* task executors to *mechanical* task executors.
