Removing some adjectives

--- a/_posts/2020-02-07-Bossless.md
+++ b/_posts/2020-02-07-Bossless.md
@@ -58,8 +58,8 @@ I suspect that is because I approach every situation with this framework in mind
 - I work hard to communicate what these services are so that people who purchase them know what to expect, and can buy or sell accordingly.
 - Purchasers get my services, tailored to their situation.
 - If a purchaser wants something that I do not provide, I will happily direct them to other vendors.
-- If a purchaser wants to dictate *how* I perform my services, I will direct them to cheaper, commodity vendors.
-    
+- If a purchaser wants to dictate *how* I perform my services, I will direct them to other vendors.
+
 I don't think of people as my *boss* because I think of them as my *clients*.
 
 Rather than trust and authority derived from power, as in the boss model, going bossless means trust and authority are derived from *transparency and transactions.*
