Adding The Code Is Lava

--- a/_posts/2020-06-29-No-Exit.md
+++ b/_posts/2020-06-29-No-Exit.md
@@ -1,3 +1,9 @@
+---
+layout: post
+title: No Exit
+tags: 
+---
+
 Beware of one-way projects.
 
 A one-way project is a project that operates in this way: the tasks on which the team works are the only tasks discussed. Tasks show up in "to-do" lists, and the team works on them without question or additional input. When questions like "should these tasks be performed in a particular order?" show up, phrases like "it doesn't matter, it all has to get done anyway" are the answer.
