--- a/_posts/2021-02-21-Grow Together, 2020.md
+++ b/_posts/2021-02-21-Grow Together, 2020.md
@@ -8,8 +8,10 @@ Alright, quick update on Coupling. 2020 was a crazy year in so many ways, and as
 
 But here are the stats!
 
-We had 1106 spins in 2020, and 40 active tribes. Most teams were running about 3 pairs of people, but there were a few teams running as many as 8 (!!!). Teams average out to about 3 days between rotations... a few teams rotate daily, a few twice a week, and a number once a week.
+We had 1106 spins in 2020, and 40 active tribes. Most teams were running about 3 pairs of people, but there were a few teams running as many as 8 (!!!). Teams average out to about 3 days between rotations... a few teams rotate daily, a few twice a week, and a bunch do a once a week rotation.
 
-I'm happy to see people are still down with it! I'm using on my current team, and its working out nicely... we're even using the new pin feature to assign a chore. Speaking of which... there were 1064 pins assigned last year! That's... actually a lot, for a new feature. Pretty wild. It looks like a few teams are using them actively, and one team might be using them very extensively... I wonder what for!  Most teams are using one or two, and I assume typical usage is for assigning a chore or responsibility. At least, that's what I'm using it for!
+I'm happy to see people are still down with it! I'm using on my current team, and its working out nicely... we're even using the new pin feature to assign a chore.
+
+Speaking of which... there were 1064 pins assigned last year! That's... actually a lot, for a new feature. Pretty wild. It looks like a few teams are using them actively, and one team might be using them very extensively... I wonder what for!  Most teams are using one or two, and I assume typical usage is for assigning a chore or responsibility. At least, that's what I'm using it for!
 
 Anyway, Coupling is still kicking! Still unfunded of course, and no current plans for advertising, growth, or any other nonsense. The teams that use it appear to... just keep using it, and make it a quiet part of their routine. Honestly, that's the best honor I can imagine for it.
