growing the heart three sizes

--- a/_posts/2022-01-10-Grow Together, 2021.md
+++ b/_posts/2022-01-10-Grow Together, 2021.md
@@ -12,7 +12,9 @@ We had 994 pair assignments in 2021. This is down from the 1106 we had in 2020, 
 
 So I was pleasantly surprised this morning when use continued to track! In terms of active teams, we had 20 teams that had over ten pair rotations. Ten of them had over 40 spins, and 5 had more than 50! That means long-running teams, using it regularly, and hopefully getting real value from it. I looked a little closer and found many of these teams have been using the app for *years* now.
 
-I'm truly honored that they continue to find it useful, and will do everything in my power to respect the trust they've given to the tool. :heart:
+I'm truly honored that they continue to find it useful, and will do everything in my power to respect the trust they've given to the tool. 
+
+## :heart:
 
 Players-wise, teams that had steady use varied between a low of 4, and a high of 10 players, with multiple teams in that 7-10 range. Kind of stands to reason that if you're floating a larger team, the tool would be extra useful. Five pairs is a rad size to a team honestly, and if the vibe is good, it can be super fun!
 
