--- a/_posts/2022-01-10-Grow Together, 2021.md
+++ b/_posts/2022-01-10-Grow Together, 2021.md
@@ -13,8 +13,7 @@ We had 994 pair assignments in 2021. This is down from the 1106 we had in 2020, 
 So I was pleasantly surprised this morning when use continued to track! In terms of active teams, we had 20 teams that had over ten pair rotations. Ten of them had over 40 spins, and 5 had more than 50! That means long-running teams, using it regularly, and hopefully getting real value from it. I looked a little closer and found many of these teams have been using the app for *years* now.
 
 I'm truly honored that they continue to find it useful, and will do everything in my power to respect the trust they've given to the tool. 
-
-## :heart:
+:heart:
 
 Players-wise, teams that had steady use varied between a low of 4, and a high of 10 players, with multiple teams in that 7-10 range. Kind of stands to reason that if you're floating a larger team, the tool would be extra useful. Five pairs is a rad size to a team honestly, and if the vibe is good, it can be super fun!
 
@@ -44,7 +43,7 @@ And, for the real nerdos out there, technical backend features:
 9. Removed the test-runtime-only alternate authentication method. That's a hack that's been in since the earliest days of Coupling, and it made me very happy to delete it. So clean.
 10. Switched to using the KTOR client. In my secret heart of hearts, I'd love to have a multiplatform safe SDK for Coupling, and this is one step toward that goal.
 11. Made further strides in JSON logging all the things... especially all the test runs. Getting real observability into test runs over time is going to be the next big thing, and I want to be on the cutting edge of making that available.
-12. And finally... I kept pace with *all of the major updates in my dependencies*. Kotlin had some big updates this year. My auto-update jobs did excellent work to highlight when some new versions of libraries were problematic (AKA would need elbow grease in order to work), and did even better work updating things without need RoB-intervention. Keeping libraries up to date is something *most software teams fail to do*, so I'm very proud to have built a system that makes it crazy easy to do, even in my free time.
+12. And finally... I kept pace with *all of the major updates in my dependencies*. Kotlin had some big updates this year. My auto-update jobs did excellent work to highlight when some new versions of libraries were problematic (AKA would need elbow grease in order to work), and did even better work updating things without needing RoB-intervention. Keeping libraries up to date is something *most software teams fail to do*, so I'm very proud to have built a system that makes it crazy easy to do, even in my free time.
 
 Ok. That's enough for this update. But it's been a year, so you deserved a nice big one. I hope you are all healthy, wealthy, and playing nicely with each other.
 
