fixing blog post title

--- a/_posts/2023-05-30-Grow Together, 2022.md
+++ b/_posts/2023-05-30-Grow Together, 2022.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Grow Together (2021 remix)
+title: Grow Together (2022)
 image: assets/images/grow-together.jpeg
 tags: 
   - Coupling
