--- a/_posts/2023-05-30-Grow Together-2022.md
+++ b/_posts/2023-05-30-Grow Together-2022.md
@@ -15,7 +15,7 @@ Tough crowd. Anyway, I was a bit nervous about how these were going to turn out 
 
 ## Numbers
 
-I have a new calculator for determining the numbers this year -> doing well "download the whole database" and more "let the service do the calculations for me". Way more civilized this way. But the rubric has changed, so for 2022 we get total 580 spins.
+I have a new calculator for determining the numbers this year - doing less "download the whole database" and more "let the service do the calculations for me". Way more civilized this way. But the rubric has changed, so for 2022 we get total 580 spins.
 
 Now, that's less than the 994 I logged for 2021 in that blog. But, if I run the same new stat system for 2021, I get 761. So 2022 is still *less* than 2021.
 
