adding a link to coupling

--- a/_posts/2023-05-30-Grow Together-2022.md
+++ b/_posts/2023-05-30-Grow Together-2022.md
@@ -7,7 +7,7 @@ tags:
   - metrics
 ---
 
-It's coming in late, but here is the Coupling yearly round-up for 2022!
+It's coming in late, but here is the [Coupling](https://coupling.zegreatrob.com) yearly round-up for 2022!
 
 *waits for wild applause*
 
@@ -34,7 +34,7 @@ Ok, I don't recall doing much this year, especially compared to 2021. But lets s
 
 1. Converted all CSS to emotion templates. The value delivered by the css module system I was engaging before was pretty universally supplanted by the emotion template plan, so its -all emotion- now.
 2. Gradle Configuration Cache support. This means local builds start lickity split, being able to skip the configuration step. This required rewriting some Gradle plugins and such (including replacing [Gradle Semantic Release](https://github.com/tschulte/gradle-semantic-release-plugin) with my own simplified rewrite [Tagger](https://github.com/robertfmurdock/ze-great-tools#tagger)), but I learned a lot in this process.
-3. Changed the word "tribe" to "party". I heard of one complaint about the term, and decided that "party" was more consistent with the application's language.
+3. Changed the word "tribe" to "party". I heard of one complaint about the term, and decided that "party" was more consistent with the application's metaphor.
 4. Started using a CDN for a few dependencies, and built into the build system the ability to ensure it matches the version used for local builds. You'd have thought there were more javascript libraries for solving this problem, but most of the ones I ran into were out-of-date and no longer functional. I have my own hand-rolled system now that uses jdelivr as its backend, and I'm very happy with it.
 5. Switched from CircleCI to Github Actions. That was wild: I was an outspoken advocate for CircleCI for years and years. But I was running into enough friction keeping it working, and Github Actions kept getting better and better... it was impossible to justify not pulling everything over. So it happened!
 6. Switching the Coupling SDK to be entirely Ktor-based. While its kind of a chunky implementation (size-wise), it was good practice in working in purely multiplatform-compliant Kotlin, both for REST and websocket communication.
