fixing blunder - Coupling should have been Kotlin. Heh!

--- a/_posts/2024-03-14-Grow Together-2023.md
+++ b/_posts/2024-03-14-Grow Together-2023.md
@@ -31,7 +31,7 @@ So them's the numbers - it looks like teams that previously used Coupling, gener
 
 Oof. I know I did some stuff this year. Probably. Let's look...
 
-As always, Coupling runs on the latest versions of Coupling, React, etc. Maintenance is basically cheap and mostly automatic. It's not *exciting*, but it is uncommon in this industry still sadly.
+As always, Coupling runs on the latest versions of Kotlin, React, etc. Maintenance is basically cheap and mostly automatic. It's not *exciting*, but it is uncommon in this industry still sadly.
 
 Coupling now has a new feature, that is entirely unadvertised and I haven't decided what to do with. It can now accept "contribution" data, and the Coupling CLI (also new) can be used to automatically parse contributions from a git repository and upload them to the Coupling service. There's even a github action for uploading contribution data automatically!
 
