--- a/_posts/2025-03-02-Grow Together-2024.md
+++ b/_posts/2025-03-02-Grow Together-2024.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Grow Together (2024)
-image: assets/images/coupling-at-work.webp
+image: assets/images/plus-i.png
 tags: 
   - Coupling
   - metrics
